--- a/challenges/002.md
+++ b/challenges/002.md
@@ -208,32 +208,33 @@ near login
 cat ~/.near/validator_key.json
 ```
 
-
 > Note: If a validator_key.json is not present, follow these steps to create one
 
 Create a `validator_key.json` 
 
-*   Generate the Key file:
-
+* Generate the keyfile:
+<pool_id> ---> xxx.factory.shardnet.near WHERE xxx is you pool name
 ```
 near generate-key <pool_id>
 ```
-<pool_id> ---> xx.factory.shardnet.near WHERE xx is you pool name
 
-* Copy the file generated to shardnet folder:
-Make sure to replace <pool_id> by your accountId
+* Copy the generated keyfile to the ~/.near folder:
 ```
-cp ~/.near-credentials/shardnet/YOUR_WALLET.json ~/.near/validator_key.json
+cp ~/.near-credentials/shardnet/xxx.factory.shardnet.near.json ~/.near/validator_key.json
 ```
-* Edit “account_id” => xx.factory.shardnet.near, where xx is your PoolName
-* Change `private_key` to `secret_key`
 
-> Note: The account_id must match the staking pool contract name or you will not be able to sign blocks.\
+* Edit the keyfile and change `private_key` to `secret_key`
+```
+nano ~/.near/validator_key.json
+```
+Use CTRL X to exit & save the changes.
 
-File content must be in the following pattern:
+> Note: The account_id in the keyfile must match the staking pool contract name or you will not be able to sign blocks or chunks!
+
+The keyfile must be in the following pattern:
 ```
 {
-  "account_id": "xx.factory.shardnet.near",
+  "account_id": "xxx.factory.shardnet.near",
   "public_key": "ed25519:HeaBJ3xLgvZacQWmEctTeUqyfSU4SDEnEwckWxd92W2G",
   "secret_key": "ed25519:****"
 }
